<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- Global -->

    <string name="app_name">Ensichat</string>


    <!-- FirstStartActivity -->

    <!-- Activity title -->
    <string name="welcome">Welcome!</string>

    <!-- Label for name field -->
    <string name="enter_name">Enter your Name:</string>

    <!-- Label for button to finish activity -->
    <string name="done">Done</string>


    <!-- MainActivity -->

    <!-- Toast shown if user denies request to enable bluetooth -->
    <string name="bluetooth_required">Bluetooth is required for this app.</string>


    <!-- ContactsFragment -->

    <!-- Empty text for contacts list -->
    <string name="no_contacts_found">You haven\'t added any contacts yet</string>

    <!-- Menu item to share this app's apk -->
    <string name="share_app">Share App</string>

    <!-- Menu item to close app and stop service -->
    <string name="exit">Exit</string>


    <!-- AddContactsActivity -->

    <!-- Activity title -->
    <string name="add_contacts">Add Contacts</string>

    <!-- Empty text for devices list -->
    <string name="devices_empty">Searching for Users\nRange: ~10m</string>


    <!-- ConfirmAddContactDialog -->

    <!-- Title of dialog shown when clicking a device -->
    <string name="add_contact_dialog">Do you want to add %1$s as a new contact?</string>

    <!-- Text to describe the local device's identicon image -->
    <string name="local_fingerprint_title">Your key fingerprint:</string>

    <!-- Text to describe the remote device's identicon image. Argument is the contact name -->
    <string name="remote_fingerprint_title">%1$s\'s key fingerprint:</string>

    <!-- Information text shown in the "add contact" dialog -->
    <string name="add_contact_dialog_hint">Before accepting, make sure the images match on both devices</string>

    <!-- Toast shown when a contact is not added because it was not accepted on the other device -->
    <string name="contact_not_added">Contact not added (denied by other device)</string>

    <!-- Toast shown when a new contact was added. Parameter is contact name -->
    <string name="contact_added">%1$s was added as a contact</string>


    <!-- SettingsActivity -->

    <!-- Activity title -->
    <string name="settings">Settings</string>

    <!-- Preference title -->
    <string name="user_name">Name</string>

    <!-- Preference title -->
    <string name="user_status">Status</string>

    <!-- Preference title -->
    <string name="my_address">My Address</string>

    <!-- Preference title -->
    <string name="scan_interval_seconds">Scan Interval (seconds)</string>

    <!-- Preference title -->
    <string name="notification_sounds">Notification Sounds</string>

    <!-- Preference title (debug only)-->
    <string name="max_connections" translatable="false">Maximum Number of Connections</string>

    <!-- Preference title -->
    <string name="report_issue">Report Issue</string>

    <!-- Preference summary -->
    <string name="report_issue_summary">Open the Ensichat issue tracker</string>

    <string name="issue_tracker_url" translatable="false">https://github.com/Nutomic/ensichat/issues</string>

    <!-- Preference title -->
    <string name="version">Version</string>

    <!-- IdenticonFragment -->

    <!-- Device address label and value -->
    <string name="address_colon">Address: %1$s</string>


    <!-- ChatService -->

    <!-- Notification text for incoming friend request -->
    <string name="notification_friend_request">New friend request!</string>

    <!-- Notification text for incoming message -->
    <string name="notification_message">New message!</string>

    <string name="toast_user_not_connected">User is not connected. Cannot send message.</string>

</resources>
